feat(cuda): reworking CUDA bindings