@@ -3,46 +3,30 @@ package org.silicon.cuda.device;
 import org.silicon.api.SiliconException;
 import org.silicon.api.device.ComputeDevice;
 import org.silicon.api.device.DeviceFeature;
+import org.silicon.cuda.Bindings;
+import org.silicon.cuda.CUResult;
 import org.silicon.cuda.CudaObject;
+import org.silicon.cuda.memory.NativeValueHandle;
 
-import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.ValueLayout;
-import java.lang.invoke.MethodHandle;
-import java.nio.charset.StandardCharsets;
 
-public record CudaDevice(MemorySegment handle, int index) implements CudaObject, ComputeDevice {
+import static org.silicon.cuda.Bindings.*;
 
-    public static final MethodHandle CUDA_DEVICE_NAME = CudaObject.find(
-        "cuda_device_name",
-        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)
-    );
-    public static final MethodHandle CUDA_CREATE_CONTEXT = CudaObject.find(
-        "cuda_create_context",
-        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)
-    );
-    public static final MethodHandle CUDA_DEVICE_MEMORY_SIZE = CudaObject.find(
-        "cuda_device_memory_size",
-        FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS)
-    );
-    public static final MethodHandle CUDA_DEVICE_SUPPORTS = CudaObject.find(
-        "cuda_device_supports",
-        FunctionDescriptor.of(
-            ValueLayout.JAVA_BOOLEAN,
-            ValueLayout.ADDRESS,
-            ValueLayout.JAVA_INT
-        )
-    );
+public record CudaDevice(int handle, int index) implements CudaObject, NativeValueHandle, ComputeDevice {
     
     @Override
     public CudaContext createContext() {
-        try {
-            MemorySegment ctx = (MemorySegment) CUDA_CREATE_CONTEXT.invoke(handle());
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment context = arena.allocate(Bindings.CU_CONTEXT);
+            int res = (int) CU_CTX_CREATE.invokeExact(context, 0, handle());
 
-            if (ctx == null || ctx.address() == 0) {
-                throw new SiliconException("Failed to create CUDA context");
+            if (res != 0) {
+                throw new SiliconException("cuCtxCreate failed: " + CUResult.fromCode(res));
             }
 
+            MemorySegment ctx = context.get(Bindings.CU_CONTEXT, 0);
             return new CudaContext(ctx, this).setCurrent();
         } catch (Throwable e) {
             throw new SiliconException("createContext() failed", e);
@@ -51,9 +35,16 @@ public record CudaDevice(MemorySegment handle, int index) implements CudaObject,
 
     @Override
     public String name() {
-        try {
-            MemorySegment nameHandle = (MemorySegment) CUDA_DEVICE_NAME.invokeExact(handle);
-            return nameHandle.reinterpret(Long.MAX_VALUE).getUtf8String(0);
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment name = arena.allocate(256);
+
+            int res = (int) CU_DEVICE_GET_NAME.invokeExact(name, 256, handle);
+
+            if (res != 0) {
+                throw new SiliconException("cuDeviceGetName failed: " + CUResult.fromCode(res));
+            }
+
+            return name.getUtf8String(0);
         } catch (Throwable e) {
             throw new SiliconException("name() failed", e);
         }
@@ -66,8 +57,16 @@ public record CudaDevice(MemorySegment handle, int index) implements CudaObject,
     
     @Override
     public long memorySize() {
-        try {
-            return (long) CUDA_DEVICE_MEMORY_SIZE.invokeExact(handle);
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment size = arena.allocate(ValueLayout.JAVA_LONG);
+
+            int res = (int) CU_DEVICE_TOTAL_MEM.invokeExact(size, handle);
+
+            if (res != 0) {
+                throw new SiliconException("cuDeviceTotalMem failed: " + CUResult.fromCode(res));
+            }
+
+            return size.get(ValueLayout.JAVA_LONG, 0);
         } catch (Throwable e) {
             throw new SiliconException("memorySize() failed", e);
         }
@@ -75,10 +74,11 @@ public record CudaDevice(MemorySegment handle, int index) implements CudaObject,
     
     @Override
     public boolean supports(DeviceFeature feature) {
-        try {
-            return (boolean) CUDA_DEVICE_SUPPORTS.invokeExact(handle, feature.ordinal());
-        } catch (Throwable e) {
-            throw new SiliconException("supports(" + feature + ") failed", e);
-        }
+        return true; // TODO: implement
+//        try {
+//            return (boolean) CUDA_DEVICE_SUPPORTS.invokeExact(handle, feature.ordinal());
+//        } catch (Throwable e) {
+//            throw new SiliconException("supports(" + feature + ") failed", e);
+//        }
     }
 }
